--- a/css/mycustomForm.css
+++ b/css/mycustomForm.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
+
 body,
 input,
 select,
@@ -7,7 +8,9 @@ body * {
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
 }
-body::after, body::before,
+
+body::after,
+body::before,
 input::after,
 input::before,
 select::after,
@@ -29,6 +32,7 @@ body *::before {
   padding: 3rem 5rem 0;
   border-radius: 1px;
 }
+
 [data-shortcode="contact_form"]::before {
   content: '';
   position: absolute;
@@ -38,16 +42,17 @@ body *::before {
   bottom: 0;
   box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
   -webkit-transform: scale(0.98);
-          transform: scale(0.98);
+  transform: scale(0.98);
   -webkit-transition: -webkit-transform 0.28s ease-in-out;
   transition: -webkit-transform 0.28s ease-in-out;
   transition: transform 0.28s ease-in-out;
   transition: transform 0.28s ease-in-out, -webkit-transform 0.28s ease-in-out;
   z-index: -1;
 }
+
 [data-shortcode="contact_form"]:hover::before {
   -webkit-transform: scale(1);
-          transform: scale(1);
+  transform: scale(1);
 }
 
 .button-container {
@@ -66,7 +71,9 @@ fieldset {
   margin-bottom: 2.25rem;
 }
 
-.checkbox .form-help, .form-radio .form-help, .form-group .form-help {
+.checkbox .form-help,
+.form-radio .form-help,
+.form-group .form-help {
   position: absolute;
   width: 100%;
 }
@@ -120,15 +127,15 @@ fieldset {
 }
 
 
-.form-group select ~ .control-label,
-.form-group input:focus ~ .control-label,
-.form-group input:valid ~ .control-label,
-.form-group input.form-file ~ .control-label,
-.form-group input.has-value ~ .control-label,
-.form-group textarea:focus ~ .control-label,
-.form-group textarea:valid ~ .control-label,
-.form-group textarea.form-file ~ .control-label,
-.form-group textarea.has-value ~ .control-label {
+.form-group select~.control-label,
+.form-group input:focus~.control-label,
+.form-group input:valid~.control-label,
+.form-group input.form-file~.control-label,
+.form-group input.has-value~.control-label,
+.form-group textarea:focus~.control-label,
+.form-group textarea:valid~.control-label,
+.form-group textarea.form-file~.control-label,
+.form-group textarea.has-value~.control-label {
   font-size: 0.8rem;
   color: gray;
   top: -1rem;
@@ -141,8 +148,8 @@ fieldset {
 }
 
 
-.form-group input:focus ~ .control-label,
-.form-group textarea:focus ~ .control-label {
+.form-group input:focus~.control-label,
+.form-group textarea:focus~.control-label {
   color: #337ab7;
 }
 
@@ -181,7 +188,7 @@ fieldset {
   z-index: 0;
   opacity: 1;
   -webkit-transform: translate(-50%, -50%) scale(0);
-          transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(0);
 }
 
 .button:hover {
@@ -189,36 +196,70 @@ fieldset {
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
 }
 
-.button:active::before, .button:focus::before {
+.button:active::before,
+.button:focus::before {
   -webkit-transition: opacity 0.28s ease 0.364s, -webkit-transform 1.12s ease;
   transition: opacity 0.28s ease 0.364s, -webkit-transform 1.12s ease;
   transition: transform 1.12s ease, opacity 0.28s ease 0.364s;
   transition: transform 1.12s ease, opacity 0.28s ease 0.364s, -webkit-transform 1.12s ease;
   -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
   opacity: 0;
 }
+
 .button:focus {
   outline: none;
 }
 
+button[type="submit"]:disabled {
+  background: lightblue;
+  color: black;
+}
+
+button[type="submit"]::before {
+  content: "";
+
+  display: inline-block;
+
+  width: 0.75em;
+  height: 0.75em;
+
+  margin-right: 0.25em;
+  vertical-align: -0.25em;
+
+  border: 0.25em solid white;
+  border-radius: 50%;
+  border-top-color: red;
+
+  animation: spin 0.75s infinite linear;
+
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
+}
+
+
+
+
 .error {
-  background-color: #fee2e2; 
-  color: #c87676; 
+  background-color: #fee2e2;
+  color: #c87676;
   padding-left: 20px;
-  padding-top: 10px; 
-  padding-bottom: 10px;  
-  border-radius: 5px;  
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 5px;
 }
 
 .success {
   background-color: #ccfbf1;
-  color:  #387e78;
-  padding-left: 20px; 
-  border-radius: 5px;  
+  color: #387e78;
+  padding-left: 20px;
+  border-radius: 5px;
 }
 
 
 .hidden {
-  display: hidden; 
+  display: hidden;
 }
