--- a/css/mycustomForm.css
+++ b/css/mycustomForm.css
@@ -174,7 +174,7 @@ fieldset {
   z-index: 1;
 }
 
-.button::before {
+.button::after {
   content: '';
   position: absolute;
   background: #071017;
@@ -196,8 +196,8 @@ fieldset {
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
 }
 
-.button:active::before,
-.button:focus::before {
+.button:active::after,
+.button:focus::after {
   -webkit-transition: opacity 0.28s ease 0.364s, -webkit-transform 1.12s ease;
   transition: opacity 0.28s ease 0.364s, -webkit-transform 1.12s ease;
   transition: transform 1.12s ease, opacity 0.28s ease 0.364s;
@@ -216,7 +216,7 @@ button[type="submit"]:disabled {
   color: black;
 }
 
-button[type="submit"]::before {
+button[type="submit"]:before {
   content: "";
 
   display: inline-block;
@@ -257,6 +257,8 @@ button[type="submit"]::before {
   color: #387e78;
   padding-left: 20px;
   border-radius: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 
